turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:17: error: not found: value color
		setCouleurSol(color(0));
                              ^